Fixing youtube display on mobile

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -519,3 +519,11 @@
 .no-bullet {
 	list-style-type: none;
 }
+
+.video-container {
+    position: relative;
+    padding-bottom: 56.25%;
+    padding-top: 35px;
+    height: 0;
+    overflow: hidden;
+}
